# task-manager-mcp

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  PROJECT_SPEC.md  README.md  README_QUICKSTART.md  SETUP_GUIDE.md  cloudrun-service.yaml  deploy-cloudrun.sh  docker-compose.yml  pyproject.toml  requirements.txt
.specswarm/: constitution.md  quality-analysis-2025-12-26-04-26.md  quality-analysis-20251226-113359.md  quality-standards.md  tech-stack.md
.specswarm/features/001-implement-phase-1-local-development-with-sqlite-and-basic-mcp-tools/: bugfix-tasks.md  bugfix.md  data-model.md  plan.md  regression-test.md  spec.md  tasks.md
.specswarm/features/001-implement-phase-1-local-development-with-sqlite-and-basic-mcp-tools/checklists/: requirements.md
.specswarm/features/001-implement-phase-1-local-development-with-sqlite-and-basic-mcp-tools/contracts/: mcp-protocol.md
.specswarm/features/002-test-execution-hang/: bugfix-tasks.md  bugfix.md  regression-test.md
.specswarm/features/003-implement-phase-2-oauth-2-1-authentication/: data-model.md  plan.md  research.md  spec.md  tasks.md
.specswarm/features/003-implement-phase-2-oauth-2-1-authentication/checklists/: requirements.md
.specswarm/features/003-implement-phase-2-oauth-2-1-authentication/contracts/: mcp-auth-integration.md  oauth-api.yaml
alembic/: env.py
alembic/versions/: 87c34d4c9d73_create_initial_oauth_2_1_schema.py  a13ddfd17fa8_add_calendar_integration_fields_to_tasks.py
app/: __init__.py  exceptions.py  main.py
app/api/: clients.py  error_handlers.py  health.py  logging_middleware.py  middleware.py  oauth.py  rate_limiting.py
app/auth/: __init__.py  encryption.py
app/config/: __init__.py  auth.py  logging_config.py  oauth.py  settings.py
app/db/: database.py  models.py  session.py
app/mcp/: __init__.py  handlers.py  tools.py
app/schemas/: __init__.py  mcp.py  oauth.py  task.py
app/services/: __init__.py  calendar_service.py  client_service.py  session_service.py  task_service.py  user_service.py
app/utils/: retry.py
docs/: DEPLOYMENT.md  ERROR_HANDLING_GUIDE.md  MCP_ERROR_CODES.md  PROJECT_STATUS.md  TEST_RESULTS.md
scripts/: init_db.py  run_server.py  test_mcp_http.py  test_mcp_tools.py  test_oauth.py  test_token_refresh.py
tests/: conftest.py  test_dynamic_clients.py  test_mcp_auth.py  test_mcp_handlers.py  test_oauth_integration.py  test_regression_conftest_hang.py  test_session_validation.py  test_task_service.py  test_user_isolation.py
